--- a/src/templates/faqs.html
+++ b/src/templates/faqs.html
@@ -1,5 +1,6 @@
-{% extends 'base.html' %} {% load static %} {% block title %} FAQ
-{%endblock %} {% block content %}
+{% extends 'base.html' %}
+{% load static %}
+{% block content %}
 <div class="banner">
   <img class="img-responsive bannerimg" src="/static/images/faq.png" alt="" />
   <div class="bannertitle">
