--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -14,7 +14,7 @@
         <a style = "float:right;" href="/login/">Log In</a>
     {% endif %}
     <a style = "float:right;" href="/projects/">Projects</a>
-    <p style = "float:right;">FAQ</p>
+    <a style = "float:right;" href="/faq/">FAQ</a>
     <a style = "float:right;" href="/dealroom/">Deal Room</a>
     <!-- <a style = "float:right;" href="gallery">Gallery</a> -->
     <a style = "float:right;" href="/upload/">Upload Project</a>
