--- a/src/templates/faq.html
+++ b/src/templates/faq.html
@@ -30,8 +30,8 @@ FAQ
 </div>
 <div class="clearfix"></div>
 <div style="background-color: rgb(224,192,151);">
-  <div class="row" style="text-align: center;padding-top: 200px; width: 750px">
-    <div class="col-md-4 col-md-offset-2">
+  <div class="row" style="text-align: center;padding-top: 50px; width: 1850px; padding-left: 600px; display: flex; justify-content: space-between">
+    <div class="col-md-4 col-md-offset-2" style="width: 600px">
       <div class="box">
         <div style="margin-left: 20px;">
           <div class="clearfix"></div>
@@ -47,7 +47,7 @@ FAQ
         <div class="clearfix"></div>
       </div>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-4" style="width: 600px">
       <div class="box">
         <div style="margin-left: 20px;">
           <div class="clearfix"></div>
@@ -65,8 +65,8 @@ FAQ
     </div>
   </div>
 
-  <div class="row" style="text-align: center;padding-top: 80px; width: 750px">
-    <div class="col-md-4 col-md-offset-2">
+  <div class="row" style="text-align: center;padding-top: 50px; width: 1850px; padding-left: 600px; display: flex; justify-content: space-between">
+    <div class="col-md-4 col-md-offset-2" style="width: 600px">
       <div class="box">
         <div style="margin-left: 20px;">
           <div class="clearfix"></div>
@@ -82,7 +82,7 @@ FAQ
         <div class="clearfix"></div>
       </div>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-4" style="width: 600px">
       <div class="box">
         <div style="margin-left: 20px;">
           <div class="clearfix"></div>
