--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -204,23 +204,56 @@
 </body>
 
 <script>
-        // Get the modal
+// Get the modal
 var modal = document.getElementById("myModal");
+var modal2 = document.getElementById("myModal2");
+var modal3 = document.getElementById("myModal3");
+var modal4 = document.getElementById("myModal4");
 
-// Get the button that opens the modal
-var btn = document.getElementById("myBtn");
+// Get the link that opens the modal
+var link = document.getElementById("myLink");
+var link2 = document.getElementById("myLink2");
+var link3 = document.getElementById("myLink3");
+var link4 = document.getElementById("myLink4");
 
 // Get the <span> element that closes the modal
 var span = document.getElementsByClassName("close")[0];
+var span2 = document.getElementById("close2");
+var span3 = document.getElementById("close3");
+var span4 = document.getElementById("close4");
 
-// // When the user clicks on the button, open the modal
-// btn.onclick = function() {
-//   modal.style.display = "block";
-// }
+// When the user clicks on the link, open the modal
+link.onclick = function() {
+  modal.style.display = "block";
+}
+
+link2.onclick = function() {
+  modal2.style.display = "block";
+}
+
+link3.onclick = function() {
+  modal3.style.display = "block";
+}
+
+link4.onclick = function() {
+  modal4.style.display = "block";
+}
 
 // When the user clicks on <span> (x), close the modal
 span.onclick = function() {
   modal.style.display = "none";
+}
+
+span2.onclick = function() {
+  modal2.style.display = "none";
+}
+
+span3.onclick = function() {
+  modal3.style.display = "none";
+}
+
+span4.onclick = function() {
+  modal4.style.display = "none";
 }
 
 // When the user clicks anywhere outside of the modal, close it
@@ -228,30 +261,17 @@ window.onclick = function(event) {
   if (event.target == modal) {
     modal.style.display = "none";
   }
+  if (event.target == modal2) {
+    modal2.style.display = "none";
+  }
+  if (event.target == modal3) {
+    modal3.style.display = "none";
+  }
+  if (event.target == modal4) {
+    modal4.style.display = "none";
+  }
 }   
 
-function openTask() {
-  modal.style.display = "block";
-  // Request.objects.all().delete();
-}
-
-function submitForm() { // default id of a django field is id_fieldname
-  field = document.getElementById("id_taskquery");
-  form = document.getElementById("formpost");
-  console.log(field)
-  console.log(form)
-  field.value = 1
-  form.submit();
-}
-
-function submitForm2() { // default id of a django field is id_fieldname
-  field = document.getElementById("id_taskquery");
-  form = document.getElementById("formpost");
-  console.log(field)
-  console.log(form)
-  field.value = 2
-  form.submit();
-}
 </script>
 
 </html>
