Custom user registration

--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -11,7 +11,12 @@
         <div style = "font-size: 24px;">
             <form action = "" method = "POST">
                 {% csrf_token %}
-                {{ formlogin.as_p }}
+                {{ form.as_p }}
+                <input type="submit" value="Submit">
+            </form>
+            <form action = "" method = "POST">
+                {% csrf_token %}
+                {{ customerform.as_p }}
                 <input type="submit" value="Submit">
             </form>
         </div>
