--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet'>
         <meta charset="utf-8">
-        <title>{{ title|title }} | Project Management System</title>
+        <title>{{ title|title }} | Minefinder</title>
         <style>
                 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, caption 
                 {margin: 0;
