--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -209,18 +209,21 @@ var modal = document.getElementById("myModal");
 var modal2 = document.getElementById("myModal2");
 var modal3 = document.getElementById("myModal3");
 var modal4 = document.getElementById("myModal4");
+var modal5 = document.getElementById("myModal5");
 
 // Get the link that opens the modal
 var link = document.getElementById("myLink");
 var link2 = document.getElementById("myLink2");
 var link3 = document.getElementById("myLink3");
 var link4 = document.getElementById("myLink4");
+var link5 = document.getElementById("myLink5");
 
 // Get the <span> element that closes the modal
 var span = document.getElementsByClassName("close")[0];
 var span2 = document.getElementById("close2");
 var span3 = document.getElementById("close3");
 var span4 = document.getElementById("close4");
+var span5 = document.getElementById("close5");
 
 // When the user clicks on the link, open the modal
 link.onclick = function() {
@@ -239,6 +242,10 @@ link4.onclick = function() {
   modal4.style.display = "block";
 }
 
+link5.onclick = function() {
+  modal5.style.display = "block";
+}
+
 // When the user clicks on <span> (x), close the modal
 span.onclick = function() {
   modal.style.display = "none";
@@ -253,6 +260,10 @@ span3.onclick = function() {
 }
 
 span4.onclick = function() {
+  modal4.style.display = "none";
+}
+
+span5.onclick = function() {
   modal4.style.display = "none";
 }
 
