--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -194,13 +194,18 @@
 </head>
 
 <body>
-        {% include 'navbar.html' %}
+        <div class="container">
+                {% include 'navbar.html' %}
+        </div>
 
-        {% block content %}
-        Replace Me
-        {% endblock %}
+        <div class="container">
+                {% block content %}{% endblock content %}
+        </div>
 
-        {% include 'footer.html' %}
+        <div class="container">
+                {% include 'footer.html' %}
+        </div>
+
 </body>
 
 <script>
