Revert "Merge branch 'main' of https://github.com/Landerwaffe/Minefinder"
This reverts commit 81eb5cc7fed52aa27a92861755d5284ff2e4a5ba, reversing
changes made to 2394a203c610ab971ba3426d0a61ea9cd6ca37a7.

--- a/src/templates/faqs.html
+++ b/src/templates/faqs.html
@@ -25,16 +25,14 @@
 </div>
 <div class="clearfix"></div>
 <div style="background-color: rgb(224, 192, 151)">
-  <div class="row" style="text-align: center; padding-top: 50px; padding-left: 600px; display: flex; justify-content: space-between">
-    <div class="col-md-10 col-md-offset-1" style="width: 1400px">
+  <div class="row" style="text-align: center; padding-top: 200px">
+    <div class="col-md-10 col-md-offset-1">
       <div class="box">
-        <div style="margin-left: 20px;">
+        <div style="margin-left: 20px">
           <div class="clearfix"></div>
           <h2>{{article.title}}</h2>
           <div style="border-bottom: 2px solid rgb(184, 92, 56)"></div>
-          <div style="text-align: left">
-            {{article.brief | safe}}
-          </div>
+          {{article.brief | safe}}
         </div>
         <div class="clearfix"></div>
       </div>
