--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -194,18 +194,13 @@
 </head>
 
 <body>
-        <div class="container">
-                {% include 'navbar.html' %}
-        </div>
+        {% include 'navbar.html' %}
 
-        <div class="container">
-                {% block content %}{% endblock content %}
-        </div>
+        {% block content %}
+        Replace Me
+        {% endblock %}
 
-        <div class="container">
-                {% include 'footer.html' %}
-        </div>
-
+        {% include 'footer.html' %}
 </body>
 
 <script>
