--- a/src/templates/dealroom.html
+++ b/src/templates/dealroom.html
@@ -9,9 +9,10 @@
 {% for message in messages %}
     <p style = "float: left; width: 90%; height: 20%;text-align: center; margin-left: 5%;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); 
     border-radius: 50px; position:relative; margin-top: 20px; ">
-        <img src="{% static 'images/profile.png' %}" alt="meeting" style = "width:3.5%; float:left;"></img> 
+        <img src="{{customer.pfp.url}}" alt="meeting" style = "width:3.5%; float:left;"></img> 
         <b>{{message.title}}</b>
         <br>{{message.text}}
+        <br>{{user.username}}
     </p>
 {% endfor %}
 
