Manual Form test and debugging

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -193,7 +193,7 @@
         </style>
 </head>
 
-<body>
+<body style = "font-family: Nunito;">
         {% include 'navbar.html' %}
 
         {% block content %}
