--- a/src/templates/faq_category.html
+++ b/src/templates/faq_category.html
@@ -1,8 +1,5 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}
-FAQ
-{%endblock %}
 {% block content %}
 <div class="banner">
   <img class="img-responsive bannerimg" src="/static/images/faq.png" alt="" />
@@ -51,7 +48,7 @@ FAQ
       <div class="box">
         <div style="margin-left: 20px;">
           <div class="clearfix"></div>
-          <h2>Safrty & Security</h2>
+          <h2>Safety & Security</h2>
           <div style="border-bottom: 2px solid rgb(184,92,56);"></div>
           <a href="/faq/6">What security features do MineFinder Employ?</a>
           <a href="/faq/7">How to protect your personal information?</a>
@@ -86,7 +83,7 @@ FAQ
       <div class="box">
         <div style="margin-left: 20px;">
           <div class="clearfix"></div>
-          <h2>Safrty & Security</h2>
+          <h2>Safety & Security</h2>
           <div style="border-bottom: 2px solid rgb(184,92,56);"></div>
           <a href="/faq/15">How we enforce our rules</a>
           <a href="/faq/16">Notices on Minefinder and what they mean</a>
