--- a/src/templates/faqs.html
+++ b/src/templates/faqs.html
@@ -25,8 +25,8 @@
 </div>
 <div class="clearfix"></div>
 <div style="background-color: rgb(224, 192, 151)">
-  <div class="row" style="text-align: center; padding-top: 200px">
-    <div class="col-md-10 col-md-offset-1">
+  <div class="row" style="text-align: center; padding-top: 50px; padding-left: 600px; display: flex; justify-content: space-between">
+    <div class="col-md-10 col-md-offset-1" style="width: 1400px">
       <div class="box">
         <div style="margin-left: 20px">
           <div class="clearfix"></div>
