--- a/src/templates/faq.html
+++ b/src/templates/faq.html
@@ -4,7 +4,7 @@
 <div class="banner">
   <img class="img-responsive bannerimg" src="/static/images/faq.png" alt="" />
   <div class="bannertitle">
-    <div class="row">
+    <div class="row"style="text-align: center">
       <div class="col-md-4 col-md-offset-2">
         {% if request.user.is_authenticated %}
         <p>Welcome {{request.user}}@gmail.com</p>
