--- a/src/templates/faqs.html
+++ b/src/templates/faqs.html
@@ -4,9 +4,13 @@
 <div class="banner">
   <img class="img-responsive bannerimg" src="/static/images/faq.png" alt="" />
   <div class="bannertitle">
-    <div class="row">
+    <div class="row" style="text-align: center">
       <div class="col-md-4 col-md-offset-2">
-        <h1>Welcome {{ request.session.user_name }}</h1>
+        {% if request.user.is_authenticated %}
+        <p>Welcome {{request.user}}@gmail.com</p>
+        {% else %}
+        <p>Welcome</p>
+        {% endif %}
         <p>How can we help you?</p>
       </div>
       <div class="col-md-4">
