--- a/src/templates/home/faqs.html
+++ b/src/templates/home/faqs.html
@@ -6,11 +6,7 @@
   <div class="bannertitle">
     <div class="row" style="text-align: center">
       <div class="col-md-4 col-md-offset-2">
-        {% if request.user.is_authenticated %}
-        <p>Welcome {{request.user}}@gmail.com</p>
-        {% else %}
-        <p>Welcome</p>
-        {% endif %}
+        <h1>Welcome {{ request.session.user_name }}<h1>
         <p>How can we help you?</p>
       </div>
       <div class="col-md-4">
