--- a/src/templates/home/faq.html
+++ b/src/templates/home/faq.html
@@ -4,7 +4,7 @@
 <div class="banner">
   <img class="img-responsive bannerimg" src="/static/images/faq.png" alt="" />
   <div class="bannertitle">
-    <div class="row"style="text-align: center">
+    <div class="row">
       <div class="col-md-4 col-md-offset-2">
         <h1>Welcome {{ request.session.user_name }}<h1>
         <p>
