--- a/src/templates/home/faqs.html
+++ b/src/templates/home/faqs.html
@@ -4,7 +4,7 @@
 <div class="banner">
   <img class="img-responsive bannerimg" src="/static/images/faq.png" alt="" />
   <div class="bannertitle">
-    <div class="row" style="text-align: center">
+    <div class="row">
       <div class="col-md-4 col-md-offset-2">
         <h1>Welcome {{ request.session.user_name }}<h1>
         <p>How can we help you?</p>
@@ -25,14 +25,16 @@
 </div>
 <div class="clearfix"></div>
 <div style="background-color: rgb(224, 192, 151)">
-  <div class="row" style="text-align: center; padding-top: 50px; padding-left: 600px; display: flex; justify-content: space-between">
+  <div class="row" style="text-align: center; padding-top: 50px; display: flex; justify-content: space-between">
     <div class="col-md-10 col-md-offset-1" style="width: 1400px">
       <div class="box">
         <div style="margin-left: 20px">
           <div class="clearfix"></div>
           <h2>{{article.title}}</h2>
           <div style="border-bottom: 2px solid rgb(184, 92, 56)"></div>
-          {{article.brief | safe}}
+          <div style="text-align: left">
+            {{article.brief | safe}}
+          </div>
         </div>
         <div class="clearfix"></div>
       </div>
