--- a/src/templates/dealroom.html
+++ b/src/templates/dealroom.html
@@ -7,21 +7,23 @@
 <img src="{% static 'images/dealroombanner.jpg' %}" alt="background" style="background-color:white;object-fit:fill;" width=2560 height=810>
 
 {% for message in messages %}
-    {% for a in customers %}
-        {% if a.id == message.author %}
-        <p style = "float: left; width: 90%; height: 20%;text-align: center; margin-left: 5%;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); 
-        border-radius: 50px; position:relative; margin-top: 20px; ">
-            <img src="{{a.pfp.url}}" alt="meeting" style = "width:3.5%; float:left;"></img> 
-            <b>{{message.title}}</b>
-            <br>{{message.text}}
-            {% for b in users %}
-                {% if a.user_id == b.id %}
-                    <br>{{b.username}}
-                {% endif %}
-            {% endfor %}
-        </p>
-        {% endif %}
-    {% endfor %}
+    {% if message.place_id == dealroom.id %}
+        {% for a in customers %}
+            {% if a.id == message.author %}
+            <p style = "float: left; width: 90%; height: 20%;text-align: center; margin-left: 5%;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); 
+            border-radius: 50px; position:relative; margin-top: 20px; ">
+                <img src="{{a.pfp.url}}" alt="meeting" style = "width:3.5%; float:left;"></img> 
+                <b>{{message.title}}</b>
+                <br>{{message.text}}
+                {% for b in users %}
+                    {% if a.user_id == b.id %}
+                        <br>{{b.username}}
+                    {% endif %}
+                {% endfor %}
+            </p>
+            {% endif %}
+        {% endfor %}
+    {% endif %}
 {% endfor %}
 
 <div style = "height: 80%; position: relative; padding-top: 20px; padding-bottom: 20px; font-family: 'Nunito';">
@@ -40,6 +42,8 @@
             {{messageform.author}}
             </div>
             <br>
+            {{messageform.place.label}}
+            {{messageform.place}}
             <input type="submit" value="Submit">
         </form>
     </p>
