--- a/src/templates/thread.html
+++ b/src/templates/thread.html
@@ -12,7 +12,7 @@
 </form>
 
 {% for thread in threads %}
-    <p>{{thread.name}}</p>
+    <a href = "/dealroom/{{thread.id}}">{{thread.name}}</a>
 {% endfor %}
 
 {% endblock %}
