--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -9,7 +9,7 @@
 
 <div class = "w3-container w3-white" style = "height: 80%; position: relative; padding-top: 20px; padding-bottom: 20px;">
     <p style = "float: left; width: 90%; height: 2560px;text-align: center; margin-left: 5%;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border-radius: 50px; position:relative;">
-        <img src="{{customers.pfp.url}}" alt="pfp" style = "width:10%; left: 3%; position: absolute;"></img>
+        <img src="{{customers.pfp.url}}" alt="pfp" style = "width:168px; left: 3%; position: absolute; height: 168px;"></img>
         <p style = "top: 11.5%; left: 11.2%; position: absolute; padding: 0px;">{{request.user}}</p>
         <hr style = "height: 96%; width: 3px; background-color: #B4B4B4; position: absolute; left: 20%;">
         <hr style = "height: 3px; width: 14%; background-color: #B4B4B4; position: absolute; top: 12%; left: 5.75%;">
