Fixed profile page bug and increased formatting

--- a/src/templates/dealroom.html
+++ b/src/templates/dealroom.html
@@ -6,7 +6,7 @@
 
 <img src="{% static 'images/dealroombanner.jpg' %}" alt="background" style="background-color:white;object-fit:fill;" width=2560 height=810>
 
-<p style = "float:right;">Attendees Placeholder</p>
+<img src="{% static 'images/dealroombanner.jpg' %}" style = "float:right;">Attendees Placeholder</p>
 
 {% for message in messages %}
     {% if message.place_id == dealroom.id %}
