--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -9,8 +9,8 @@
 
 <div class = "w3-container w3-white" style = "height: 80%; position: relative; padding-top: 20px; padding-bottom: 20px;">
     <p style = "float: left; width: 90%; height: 2560px;text-align: center; margin-left: 5%;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border-radius: 50px; position:relative;">
-        <img src="{{customers.pfp.url}}" alt="pfp" style = "width:168px; left: 3%; position: absolute; height: 168px;"></img>
-        <p style = "top: 11.5%; left: 11.2%; position: absolute; padding: 0px;">{{request.user}}</p>
+        <a href = "/"><img src="{{customers.pfp.url}}" alt="pfp" style = "width:170px; left: 4.3%; top: 3%; position: absolute; height: 170px; border-radius: 50%;"></img></a>
+        <p style = "top: 10%; left: 9.6%; position: absolute; padding: 0px; font-size: 36px;">{{request.user}}</p>
         <hr style = "height: 96%; width: 3px; background-color: #B4B4B4; position: absolute; left: 20%;">
         <hr style = "height: 3px; width: 14%; background-color: #B4B4B4; position: absolute; top: 12%; left: 5.75%;">
         <p style = "top: 1.5%; left: 29%; position: absolute; padding: 0px;"><b>General Account Settings</b></p>
@@ -29,7 +29,8 @@
         <p style = "top: 20%; left: 82.2%; position: absolute; padding: 0px; color:#B85C38;">Upload new profile image</p>
         <form action = "" method = "POST" enctype="multipart/form-data">
           {% csrf_token %}
-          {{ pfpform.as_p }}
+          {{ pfpform.pfp.label }}
+          {{pfpform.pfp}}
           <input type="submit" value="Submit">
         </form>
         <!-- <br><button class="button" style = "color:white;background-color:#B85C38;font-size:28px;padding:18px 36px;">Search Projects</button> -->
@@ -130,6 +131,35 @@
   </div>
 
 </div>
+
+ <!-- MODAL TO CROP THE IMAGE -->
+<div class="modal fade" id="modalCrop">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        <h4 class="modal-title">Crop the photo</h4>
+      </div>
+      <div class="modal-body">
+        <img src="" id="image" style="max-width: 100%;">
+      </div>
+      <div class="modal-footer">
+        <div class="btn-group pull-left" role="group">
+          <button type="button" class="btn btn-default js-zoom-in">
+            <span class="glyphicon glyphicon-zoom-in"></span>
+          </button>
+          <button type="button" class="btn btn-default js-zoom-out">
+            <span class="glyphicon glyphicon-zoom-out"></span>
+          </button>
+        </div>
+        <button type="button" class="btn btn-default" data-dismiss="modal">Nevermind</button>
+        <button type="button" class="btn btn-primary js-crop-and-upload">Crop and upload</button>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
 
 
@@ -139,4 +169,3 @@
 
 
 
-<!-- <p>All your sensitive information in one place: {{my_nam}}</p> -->
