--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -210,6 +210,7 @@ var modal2 = document.getElementById("myModal2");
 var modal3 = document.getElementById("myModal3");
 var modal4 = document.getElementById("myModal4");
 var modal5 = document.getElementById("myModal5");
+var modal6 = document.getElementById("myModal6");
 
 // Get the link that opens the modal
 var link = document.getElementById("myLink");
@@ -217,6 +218,7 @@ var link2 = document.getElementById("myLink2");
 var link3 = document.getElementById("myLink3");
 var link4 = document.getElementById("myLink4");
 var link5 = document.getElementById("myLink5");
+var link6 = document.getElementById("myLink6");
 
 // Get the <span> element that closes the modal
 var span = document.getElementsByClassName("close")[0];
@@ -224,6 +226,7 @@ var span2 = document.getElementById("close2");
 var span3 = document.getElementById("close3");
 var span4 = document.getElementById("close4");
 var span5 = document.getElementById("close5");
+var span6 = document.getElementById("close6");
 
 // When the user clicks on the link, open the modal
 link.onclick = function() {
@@ -246,6 +249,10 @@ link5.onclick = function() {
   modal5.style.display = "block";
 }
 
+link6.onclick = function() {
+  modal6.style.display = "block";
+}
+
 // When the user clicks on <span> (x), close the modal
 span.onclick = function() {
   modal.style.display = "none";
@@ -264,7 +271,11 @@ span4.onclick = function() {
 }
 
 span5.onclick = function() {
-  modal4.style.display = "none";
+  modal5.style.display = "none";
+}
+
+span6.onclick = function() {
+  modal5.style.display = "none";
 }
 
 // When the user clicks anywhere outside of the modal, close it
@@ -280,6 +291,12 @@ window.onclick = function(event) {
   }
   if (event.target == modal4) {
     modal4.style.display = "none";
+  }
+  if (event.target == modal5) {
+    modal5.style.display = "none";
+  }
+  if (event.target == modal6) {
+    modal6.style.display = "none";
   }
 }   
 
