--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -211,6 +211,7 @@ var modal3 = document.getElementById("myModal3");
 var modal4 = document.getElementById("myModal4");
 var modal5 = document.getElementById("myModal5");
 var modal6 = document.getElementById("myModal6");
+var modal7 = document.getElementById("myModal7");
 
 // Get the link that opens the modal
 var link = document.getElementById("myLink");
@@ -219,6 +220,7 @@ var link3 = document.getElementById("myLink3");
 var link4 = document.getElementById("myLink4");
 var link5 = document.getElementById("myLink5");
 var link6 = document.getElementById("myLink6");
+var link7 = document.getElementById("myLink7");
 
 // Get the <span> element that closes the modal
 var span = document.getElementsByClassName("close")[0];
@@ -227,6 +229,7 @@ var span3 = document.getElementById("close3");
 var span4 = document.getElementById("close4");
 var span5 = document.getElementById("close5");
 var span6 = document.getElementById("close6");
+var span7 = document.getElementById("close7");
 
 // When the user clicks on the link, open the modal
 link.onclick = function() {
@@ -253,6 +256,10 @@ link6.onclick = function() {
   modal6.style.display = "block";
 }
 
+link7.onclick = function() {
+  modal7.style.display = "block";
+}
+
 // When the user clicks on <span> (x), close the modal
 span.onclick = function() {
   modal.style.display = "none";
@@ -275,7 +282,11 @@ span5.onclick = function() {
 }
 
 span6.onclick = function() {
-  modal5.style.display = "none";
+  modal6.style.display = "none";
+}
+
+span7.onclick = function() {
+  modal7.style.display = "none";
 }
 
 // When the user clicks anywhere outside of the modal, close it
@@ -297,6 +308,9 @@ window.onclick = function(event) {
   }
   if (event.target == modal6) {
     modal6.style.display = "none";
+  }
+  if (event.target == modal7) {
+    modal7.style.display = "none";
   }
 }   
 
