Added more formatting for the deal room

--- a/src/templates/dealroom.html
+++ b/src/templates/dealroom.html
@@ -6,22 +6,24 @@
 
 <img src="{% static 'images/dealroombanner.jpg' %}" alt="background" style="background-color:white;object-fit:fill;" width=2560 height=810>
 
-<img src="{% static 'images/dealroombanner.jpg' %}" style = "float:right;">Attendees Placeholder</p>
+<img src="{% static 'images/dealroombanne.jpg' %}" style = "float:right;">Attendees Placeholder</p>
 
 {% for message in messages %}
     {% if message.place_id == dealroom.id %}
         {% for a in customers %}
             {% if a.id == message.author %}
             <p style = "float: left; width: 90%; height: 20%;text-align: center; margin-left: 5%;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); 
-            border-radius: 50px; position:relative; margin-top: 20px; ">
-                <img src="{{a.pfp.url}}" alt="meeting" style = "width:3.5%; float:left;"></img> 
-                <b>{{message.title}}</b>
-                <br>{{message.text}}
-                {% for b in users %}
-                    {% if a.user_id == b.id %}
-                        <br>{{b.username}}
-                    {% endif %}
-                {% endfor %}
+            border-radius: 50px; position:relative; margin-top: 20px;  padding: 1%;">
+                <img src="{{a.pfp.url}}" alt="meeting" style = "width:170px; float:left; height: 170px; border-radius: 50%; margin-left: 50px; margin-top: 20px;">
+                    {% for b in users %}
+                        {% if a.user_id == b.id %}
+                            <span style = "float:left; margin-top: 10px; clear: left; margin-left: 100px;">{{b.username}} </span>
+                        {% endif %}
+                    {% endfor %}
+                </img> 
+                <span style = "float:left; font-size: 32px; color: #B85C38; margin-left: 12px; margin-top:0px; position: absolute; left: 12.5%;"><u><b>{{message.title}}</b></u></span>
+                    <br><span style = "color:black; font-weight: normal; font-size: 32px; position: relative; position: absolute; left: 13.1%; top: 22%;">{{message.text}}</span>
+                    <br>
             </p>
             {% endif %}
         {% endfor %}
@@ -29,9 +31,9 @@
 {% endfor %}
 
 <div style = "height: 80%; position: relative; padding-top: 20px; padding-bottom: 20px; font-family: 'Nunito';">
-    <p style = "float: left; width: 90%; height: 720px;text-align: center; margin-left: 5%; border-radius: 50px; position:relative;">
+    <p style = "width: 90%; height: 720px;text-align: center; margin-left: 5%; border-radius: 50px; position:relative;">
         <!-- <p style = "position: absolute; left: 10%; padding-top: 2%; font-size: 60px; color: #B85C38;"><b>Deal Room</b></p> -->
-        <form action = "" method = "POST" enctype="multipart/form-data" style = "position: absolute; left: 10%; padding-top: 8%;">
+        <form action = "" method = "POST" enctype="multipart/form-data" style = "position: relative;  padding-top: 8%;">
             {% csrf_token %}
             {{messageform.title.label}}
             {{messageform.title}}
@@ -44,8 +46,10 @@
             {{messageform.author}}
             </div>
             <br>
+            <div hidden>
             {{messageform.place.label}}
             {{messageform.place}}
+            </div>
             <input type="submit" value="Submit">
         </form>
     </p>
