--- a/src/templates/thread.html
+++ b/src/templates/thread.html
@@ -14,7 +14,7 @@
 <p style = "font-size: 36px;"><b>Your Threads</b></p>
 {% for thread in threads %}
     <img src = "{% static 'images/GreenHill.jpg' %}" style = "height: 300px;"><br>
-    <a href = "/dealroom/{{thread.id}}" style = "color: #B85C38;"><b>{{thread.name}}<b></a><br>
+    <a href = "/dealroom/{{thread.id}}" style = "color: #B85C38; font-weight: bold;">{{thread.name}}</a><br>
 {% endfor %}
 
 {% endblock %}
