change font to sans serif

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -193,7 +193,7 @@
         </style>
 </head>
 
-<body style = "font-family: Nunito;">
+<body style = "font-family: sans-serif !important;">
         {% include 'navbar.html' %}
 
         {% block content %}
